infrastructure/overlays/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-app
spec:
  template:
    spec:
      containers:
        - name: app
          image: ghcr.io/pablitxn/garage-sale:dev
