infrastructure/overlays/dev/ingress-route.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: web-ingress
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`garage-sale-dev.orchid-labs.xyz`)
      middlewares:
        - name: sso
          namespace: infrastructure
      services:
        - name: web-app
          kind: Service
          port: 80
  tls:
     secretName: garage-sale-dev-orchid-labs-tls
